# infra-cluster-netangels

./: .env.example  .gitignore  README.md  auth.py  config.py  main.py  pyproject.toml
ansible/: ansible.cfg
ansible/inventory/: tst.ini
ansible/inventory/group_vars/: nomad_consul_clients.yml  tst.yml
ansible/playbooks/: consul_nomad_setup.yml
ansible/roles/consul/defaults/: main.yml
ansible/roles/consul/handlers/: main.yml
ansible/roles/consul/tasks/: bin_install.yml  client_setup.yml  config.yml  dir_create.yml  download.yml  indentity_create.yml  main.yml  manage.yml  server_setup.yml  service_setup.yml
ansible/roles/consul/templates/: consul.hcl.j2  consul.service.j2  consul_client.hcl.j2  consul_server.hcl.j2  nginx.nomad.j2
ansible/roles/consul/vars/: main.yml
ansible/roles/docker/tasks/: docker_engine.yml  main.yml  setup_repo.yml
ansible/roles/nomad/defaults/: main.yml
ansible/roles/nomad/handlers/: main.yml
ansible/roles/nomad/tasks/: bin_install.yml  bridge-nf.yml  client_setup.yml  cni.yml  config.yml  deploy-nginx.yml  dir_create.yml  download.yml  indentity_create.yml  join-cluster.yml  main.yml  manage.yml  server_setup.yml  service_setup.yml
ansible/roles/nomad/templates/: nginx.nomad.j2  nomad.hcl.j2  nomad.service.j2  nomad_client.hcl.j2  nomad_server.hcl.j2
ansible/roles/nomad/vars/: main.yml
api/: net_mng.py  ssh_key_mng.py  vm_mng.py
scripts/: create-vm.py  create-vm.sh  get-dist.ps1  get-dist.sh  get-sshkeys.sh  get-token.sh
utils/: ansible_mng.py  cluster_mng.py  vm_setup.py
